[package]
name = "glim"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.4.1", default-features = false, features = ["windows-sys", "wl-clipboard-rs"] }
chrono = { version = "0.4.38", features = ["serde"] }
colorsys = "0.6.7"
confy = "0.6.1"
tachyonfx = "0.7.0"
crossterm = "0.28.1"
derive_builder = "0.20.0"
directories = "5.0.1"
itertools = "0.13.0"
once_cell = "1.19.0"
open = "5.1.2"
ratatui = "0.28.1"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tui-input = "0.10.1"
clap = { version = "4.5.19", features = ["derive"] }
