[package]
name = "glim-tui"
version = "0.2.0-dev"
edition = "2021"
license = "MIT"
description = "A TUI for monitoring GitLab CI/CD pipelines and projects"
repository = "https://github.com/junkdog/glim"
homepage = "https://github.com/junkdog/glim"
documentation = "https://docs.rs/glim-tui"
readme = "README.md"
keywords = ["ratatui", "TUI", "monitoring", "gitlab"]
categories = ["command-line-interface"]
authors = ["Adrian Papari <junkdog@angelhill.net>"]
exclude = ["images/*.gif", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "glim"
path = "src/main.rs"

[dependencies]
arboard = { version = "3.4.1", default-features = false, features = ["windows-sys", "wl-clipboard-rs"] }
chrono = { version = "0.4.38", features = ["serde"] }
colorsys = "0.6.7"
compact_str = { version = "0.8", features = ["serde"] }
confy = "0.6.1"
tachyonfx = "0.15.0"
crossterm = "0.28.1"
derive_builder = "0.20.2"
directories = "5.0.1"
itertools = "0.14.0"
once_cell = "1.20.2"
open = "5.3.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
reqwest = "0.12.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "1.0.64"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tui-input = "0.10.1"
clap = { version = "4.5.26", features = ["derive"] }
unicode-width = "0.2"
color-eyre = "0.6.5"
